Refactor: change String.format() to "".formatted()